# robot_simulation

robot_model/robot_model/: CMakeLists.txt  ReadMe.MD  package.xml
robot_model/robot_model/config/: controller.yaml  ekf.yaml  gmapping_params.yaml  laser_config.yaml  my_laser_config.yaml
robot_model/robot_model/launch/: diff_wheeled_gazebo.launch  imu.launch  imu_test.launch  keyboard_teleop.launch  localize.launch  lumibot_core.launch  lumibot_description.launch  lumibot_navigation.launch  lumibot_slam.launch  test_imu.launch
robot_model/robot_model/launch/includes/amcl/: amcl.launch.xml
robot_model/robot_model/launch/includes/imu/: imu.launch
robot_model/robot_model/launch/includes/lidar/: laser_filter.launch  lidar.launch
robot_model/robot_model/launch/includes/move_base/: move_base.launch.xml  move_base_old.launch.xml
robot_model/robot_model/launch/includes/serial/: serial.launch
robot_model/robot_model/launch/includes/slam/: gmapping.launch.xml  hector_slam.launch.xml
robot_model/robot_model/maps/: map_final.pgm  map_final.yaml  map_final_edit.pgm  map_final_edit.xcf  map_final_edit.yaml  test_map_kitchen.pgm  test_map_kitchen.xcf  test_map_kitchen.yaml
robot_model/robot_model/maps/Hector_SLAM_maps/: hector_map_results.yaml  hector_map_test.yaml  mapok.yaml
robot_model/robot_model/maps/map_trash/: map_1611.pgm  map_1611.yaml  map_origin.pgm  map_origin.yaml  office_map.pgm  office_map.yaml  office_map_EDIT.pgm  office_map_EDIT.yaml  test.pgm  test.yaml  test1.pgm  test1.yaml  test_ok.pgm  test_ok.yaml
robot_model/robot_model/param/: costmap_common_params.yaml  costmap_converter_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
robot_model/robot_model/param old/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
robot_model/robot_model/rviz/: navigation.rviz  urdf.rviz
robot_model/robot_model/scripts/: hello_world.ui  robot_gui_2.py  wall_follower.py
robot_model/robot_model/src/: diff_tf.cpp  diff_tf_old.cpp  imu_trans.cpp  send_goal.cpp  send_imu_data.cpp  sub_button_status.cpp
robot_model/robot_model/urdf/: 01_model.urdf  02_robot_model.xacro  02_robot_model_laser.xacro  lumibot_model.xacro  side_wheel.urdf.xacro  test_imu.urdf  wheel.urdf.xacro
robot_model/robot_model/worlds/: demo_7.world  test.world
robot_model/robot_model/worlds/final_room/: model.config  model.sdf
