<package>
  <name>robot_model</name>
  <version>0.5.0</version>

  <description>This package contains a number of URDF tutorials.</description>
  <author email="davidvlu@gmail.com">David V. Lu!!</author>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/urdf_tutorial</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>message_generation</build_depend>
  

  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>imu_complementary_filter</run_depend>
  <run_depend>imu_filter_madgwick</run_depend>
  <run_depend>rviz_imu_plugin</run_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
